<resources>
    <string name="app_name">TaskApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="title_profile">Profile</string>
    <string name="task">Task</string>
    <string name="get_started">Get started!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="_save">Save</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="phone">Enter your phone number</string>
    <string name="sms">Send SMS</string>
    <string name="confirm">Confirm</string>
    <string name="code">Enter your code</string>
    <string name="exit">Exit</string>
    <string name="update">Update</string>
    <string name="saveTask">Save</string>
</resources>