<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.taskapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_taskFragment"
            app:destination="@id/taskFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.taskapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.taskapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.taskapp.ui.task.TaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_task">
        <argument
            android:name="task"
            android:defaultValue="@null"
            app:argType="com.example.taskapp.model.Task"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.taskapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.example.taskapp.ui.onBoarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" />
    <fragment
        android:id="@+id/verificationFragment"
        android:name="com.example.taskapp.ui.verification.VerificationFragment"
        android:label="VerificationFragment">
        <argument
            android:name="verId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.taskapp.ui.auth.AuthFragment"
        android:label="fragment_auth"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_verificationFragment"
            app:destination="@id/verificationFragment" />
    </fragment>
</navigation>